--- a/WordSnapConsoleApp/WordSnapConsoleApp/WordSnapConsoleApp.csproj
+++ b/WordSnapConsoleApp/WordSnapConsoleApp/WordSnapConsoleApp.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="Npgsql" Version="8.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DAL\" />
+    <Folder Include="BLL\" />
+    <Folder Include="Presentation\" />
+  </ItemGroup>
+
 </Project>
