added the delete card button and the context menu

--- a/WordSnapConsoleApp/WordSnapWPFApp/WordSnapWPFApp.csproj
+++ b/WordSnapConsoleApp/WordSnapWPFApp/WordSnapWPFApp.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <None Remove="Presentation\Fonts\Pacifico-Regular.ttf" />
+    <None Remove="Presentation\Images\bin32.png" />
+    <None Remove="Presentation\Images\bin64.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,6 +27,8 @@
 
   <ItemGroup>
     <Resource Include="Presentation\Fonts\Pacifico-Regular.ttf" />
+    <Resource Include="Presentation\Images\bin32.png" />
+    <Resource Include="Presentation\Images\bin64.png" />
   </ItemGroup>
 
 </Project>
